limpiando codigo de gui